--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.13.1",
+    "ldrs": "^1.0.2",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
