--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
+    "i18next": "^23.15.1",
     "ldrs": "^1.0.2",
     "next": "14.2.6",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "stripe": "^16.12.0"
