--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.7.7",
     "firebase": "^10.13.1",
+    "firebase-admin": "^12.5.0",
     "i18next": "^23.15.1",
     "ldrs": "^1.0.2",
+    "micro": "^10.0.1",
     "next": "14.2.6",
     "next-i18next": "^15.3.1",
     "react": "^18",
