--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.5.0",
     "i18next": "^23.15.1",
@@ -17,6 +17,7 @@
     "micro": "^10.0.1",
     "next": "14.2.6",
     "next-i18next": "^15.3.1",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
